--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+Title - Deploy testing Page
+Description - This is a test webpage created to test github pages deploy feature. Content may added later to this page.
